# Visual-Novel-Text-To-Speech

./: .gitignore  README.md  approved_speakers.txt  install.py  main.py  pyproject.toml
mnt/user-data/outputs/vn-tts-reader/emotion_sounds/: README.md
